<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_post">

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.linkme.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_new"
        android:label="@string/title_plus" />

    <fragment
        android:id="@+id/navigation_story"
        android:name="com.example.linkme.ui.story.StoryFragment"
        android:label="@string/title_story"
        tools:layout="@layout/fragment_story" />
</navigation>